k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  namespace: genre-cluster
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "9"
spec:
  ingressClassName: traefik
  rules:
  - host: localhost
    http:
      paths:
      - path: /home/
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-api
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
